--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "Perceptual Inc.",
   "license": "MIT",
   "scripts": {
-    "test": "percy exec -- node tests/test.js"
+    "test": "percy exec -- node tests/test1.js"
   },
   "devDependencies": {
     "@percy/cli": "^1.0.5",
